# AstronKit

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: SomeDclass.py  SomeDclassAI.py  some.dc
src/astronkit/: __main__.py  dclass_parser.py  python_dumper.py  types.py
