[project]
name = "astronkit"
version = "0.1.2"
description = "Strongly typed Astron calls"
readme = "README.md"
authors = [{ name = "Wizzerinus", email = "quillinde@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["panda3d", "types-panda3d"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
ignore = []
pythonVersion = "3.8"

reportExplicitAny = false
reportAny = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false
reportIncompatibleMethodOverride = false
reportOverlappingOverload = false
