[project]
name = "astronkit"
version = "0.1.3"
description = "Strongly typed Astron calls"
readme = "README.md"
authors = [{ name = "Wizzerinus", email = "quillinde@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["click>=8.1.8", "panda3d", "typer>=0.16.0", "types-panda3d"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
ignore = []
pythonVersion = "3.8"

reportExplicitAny = false
reportAny = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false
reportIncompatibleMethodOverride = false
reportOverlappingOverload = false
